--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
 		"@lucia-auth/adapter-prisma": "^2.0.0",
 		"@master/css.svelte": "^2.0.0-beta.159",
 		"@master/normal.css": "^2.0.0-beta.159",
-		"lucia-auth": "^1.7.1"
+		"lucia-auth": "^1.7.1",
+		"lucide-svelte": "^0.233.0",
+		"svelte-tooltip": "^1.2.0"
 	}
 }
